log/build_2024-07-09_13-36-20/stage_challenge/stderr.log
  File "/home/lucas/ros2_ws/install/stage_challenge/lib/python3.10/site-packages/stage_challenge/rrt2.py", line 54
    elif self.oz <= -0.92 and self.px > and self.scan_data > 1:
                                        ^^^
SyntaxError: invalid syntax

